@@ -227,10 +227,13 @@ extern	struct stat_job *stat_process;
 int compare_qstat_version ( const char* have, const char* expected );
 int start_prog_and_return_fd(char *const argv[], pid_t *pid);
 int check_qstat_version( const char* version );
+extern void play_sound (char *sound);
 
 int filter_start_index;
 
 int redialserver;
+
+int event_type;
 
 #endif /* __XQF_H__ */
 
