@@ -1,3 +1,9 @@
+Oct 03, 2002: Alex Burger <alex@fragit_dot_net>
+- Added sound support actions for: xqf start, xqf quit, update, refresh,
+  stop, server connect, redial success.  Added Preferences / Sound Options.
+  If file does not start with a / (except for Player), prepends user's
+  config folder (~/.qf/)
+
 Oct 03, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - add popup while redialing
 
